# libvdpau

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt  vdpau.pc.in
doc/: Doxyfile.in  Makefile.am  meson.build
include/: meson.build
include/vdpau/: vdpau.h  vdpau_x11.h
src/: Makefile.am  mesa_dri2.c  mesa_dri2.h  meson.build  vdpau_wrapper.c
test/: .gitignore  Makefile.am  dlclose.c  gitlab-ci.sh  meson.build
trace/: Makefile.am  meson.build  vdpau_trace.cpp
