option('documentation',
    type : 'combo',
    choices : [ 'true', 'false', 'auto' ],
    value : 'auto',
    description : 'Build documentation')
option('dri2',
    type : 'combo',
    choices : [ 'true', 'false', 'auto' ],
    value : 'auto',
    description : 'Query driver name through DRI2')
option('moduledir',
    type : 'string',
    description : 'Module directory')
